--- a/.sync.yml
+++ b/.sync.yml
@@ -4,3 +4,6 @@ Gemfile:
     ':test':
       - gem: 'vault'
       - gem: 'debouncer'
+.github/workflows/ci.yml:
+  with:
+    additional_packages: extrepo && extrepo enable hashicorp && apt-get update && apt-get install -y vault
