--- a/.sync.yml
+++ b/.sync.yml
@@ -6,4 +6,4 @@ Gemfile:
       - gem: 'debouncer'
 .github/workflows/ci.yml:
   with:
-    additional_packages: extrepo extrepo-offline-data && sudo sed -i "s/trixie/bookworm/; /- non-free/ s/# //" /etc/extrepo/config.yaml && sudo extrepo enable hashicorp && sudo apt-get update && sudo apt-get install -y vault
+    additional_packages: extrepo extrepo-offline-data && sudo sed -i "s/trixie/bookworm/; /- non-free/ s/# //" /etc/extrepo/config.yaml && sudo extrepo enable hashicorp && sudo apt-get update && sudo apt-get install -y vault && sudo systemctl stop vault
