--- a/.sync.yml
+++ b/.sync.yml
@@ -6,4 +6,5 @@ Gemfile:
       - gem: 'debouncer'
 .github/workflows/ci.yml:
   with:
+    unit_tests_rake_task: spec
     additional_packages: extrepo extrepo-offline-data && sudo sed -i "s/trixie/bookworm/; /- non-free/ s/# //" /etc/extrepo/config.yaml && sudo extrepo enable hashicorp && sudo apt-get update && sudo apt-get install -y vault && sudo systemctl stop vault
